--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,11 @@
         <td> slice:1:5 </td>
         <td>  {{ array | slice:1:5  }} </td>
       </tr>
+      <tr>
+        <th>  {{ PI }} </th>
+        <td> number </td>
+        <td>  {{ PI | number:'1.0-2'  }} </td>
+      </tr>
 
     </tbody>
   </table>
