--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,16 @@
         <td> number </td>
         <td>  {{ PI | number:'1.0-2'  }} </td>
       </tr>
+      <tr>
+        <th>  {{ a }} </th>
+        <td> percent </td>
+        <td>  {{ a | percent }} </td>
+      </tr>
+      <tr>
+        <th>  {{ a }} </th>
+        <td> percent:'2.2-2' </td>
+        <td>  {{ a | percent:'2.2-2' }} </td>
+      </tr>
 
     </tbody>
   </table>
