--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,5 +80,9 @@
       <ul>
         <li *ngFor="let item of array | slice:5:20">{{ item }}</li>
       </ul>
+    <pre>
+    <h3>JSON</h3>
+    {{ heroe | json }}
+    </pre>
   </table>
 </div>
