--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,6 +72,12 @@
         <td>  {{ salario | currency:'EUR':true:'4.0-0' }} </td>
       </tr>
 
+      <tr>
+        <th>  {{ valorDePromesa }} </th>
+        <td> async </td>
+        <td>  {{ valorDePromesa }} </td>
+      </tr>
+
     </tbody>
   </table>
 
