--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,7 +75,7 @@
       <tr>
         <th>  {{ valorDePromesa }} </th>
         <td> async </td>
-        <td>  {{ valorDePromesa }} </td>
+        <td>  {{ valorDePromesa | async }} </td>
       </tr>
 
     </tbody>
