--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,7 +96,16 @@
         <td>  {{ fecha | date:'MMMM - dd' }} </td>
       </tr>
 
-      
+      <tr>
+        <th>  {{ nombre2 }} </th>
+        <td> capitalizado </td>
+        <td>  {{ nombre2 | capitalizado}} </td>
+      </tr>
+      <tr>
+        <th>  {{ nombre2 }} </th>
+        <td> capitalizado </td>
+        <td>  {{ nombre2 | capitalizado:false }} </td>
+      </tr>
 
     </tbody>
   </table>
